--- a/_posts/2021-08-10-user-input-within-functions/User-input-within-functions.html
+++ b/_posts/2021-08-10-user-input-within-functions/User-input-within-functions.html
@@ -111,12 +111,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["User input as function arguments in R"]},{"type":"character","attributes":{},"value":["A brief rundown of using readline() to prompt a user's input for use as function arguments\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Peter Menzies"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["08-22-2021"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["User input as function arguments in R"]},{"type":"character","attributes":{},"value":["A brief rundown of using readline() to prompt a user's input for use as function arguments\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Peter Menzies"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["08-22-2021"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["R","Function I Learned"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["a-function-i-learned_files/anchor-4.2.2/anchor.min.js","a-function-i-learned_files/bowser-1.9.3/bowser.min.js","a-function-i-learned_files/distill-2.2.21/template.v2.js","a-function-i-learned_files/figure-html5/unnamed-chunk-1-1.png","a-function-i-learned_files/header-attrs-2.9/header-attrs.js","a-function-i-learned_files/jquery-1.11.3/jquery.min.js","a-function-i-learned_files/popper-2.6.0/popper.min.js","a-function-i-learned_files/tippy-6.2.7/tippy-bundle.umd.min.js","a-function-i-learned_files/tippy-6.2.7/tippy-light-border.css","a-function-i-learned_files/tippy-6.2.7/tippy.css","a-function-i-learned_files/tippy-6.2.7/tippy.umd.min.js","a-function-i-learned_files/webcomponents-2.0.0/webcomponents.js","a-function-i-learned.html"]}
+  {"type":"character","attributes":{},"value":["User-input-within-functions_files/anchor-4.2.2/anchor.min.js","User-input-within-functions_files/bowser-1.9.3/bowser.min.js","User-input-within-functions_files/distill-2.2.21/template.v2.js","User-input-within-functions_files/header-attrs-2.10/header-attrs.js","User-input-within-functions_files/header-attrs-2.9/header-attrs.js","User-input-within-functions_files/jquery-1.11.3/jquery.min.js","User-input-within-functions_files/popper-2.6.0/popper.min.js","User-input-within-functions_files/tippy-6.2.7/tippy-bundle.umd.min.js","User-input-within-functions_files/tippy-6.2.7/tippy-light-border.css","User-input-within-functions_files/tippy-6.2.7/tippy.css","User-input-within-functions_files/tippy-6.2.7/tippy.umd.min.js","User-input-within-functions_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1434,7 +1434,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="User-input-within-functions_files/header-attrs-2.9/header-attrs.js"></script>
+  <script src="User-input-within-functions_files/header-attrs-2.10/header-attrs.js"></script>
   <script src="User-input-within-functions_files/jquery-1.11.3/jquery.min.js"></script>
   <script src="User-input-within-functions_files/popper-2.6.0/popper.min.js"></script>
   <link href="User-input-within-functions_files/tippy-6.2.7/tippy.css" rel="stylesheet" />
@@ -1467,6 +1467,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-title">
 <h1>User input as function arguments in R</h1>
 <!--radix_placeholder_categories-->
+<div class="dt-tags">
+<div class="dt=tag">R</div>
+<div class="dt=tag">Function I Learned</div>
+</div>
 <!--/radix_placeholder_categories-->
 <p><p>A brief rundown of using readline() to prompt a user’s input for use as function arguments</p></p>
 </div>
